--- a/brouillons.html
+++ b/brouillons.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>Exercice no. 2</h1>
+    <p>Membres</p>
+    <li>Dihya IBERSIENE</li>
+    <li>Chen WANG</li>
+    <li>Nguyen Khoi Nguyen</li>
+    <li>Ai Jiaqi</li>
+    <li>Imad Hantouche</li>
+    <li>Mai TAKAGI</li>
+</body>
+
+</html>
