--- a/brouillons.html
+++ b/brouillons.html
@@ -16,6 +16,14 @@
     <li>Ai Jiaqi</li>
     <li>Imad Hantouche</li>
     <li>Mai TAKAGI</li>
+
+    <h2>Visualisation des donnés non-structurée</h2>
+    <p>Graphique "Bubbles" avec Voyant.</p>
+    <p>Notre-Dame de Paris - Tome 1 by Victor Hugo</p>
+    <div>
+        <iframe style='width: 608px; height: 399px;'
+            src='https://voyant-tools.org/?corpus=7f3614957a0a1c637fadae031faf24e2&stopList=stop.fr.txt&view=Bubbles'></iframe>
+    </div>
 </body>
 
 </html>
