--- a/brouillons.html
+++ b/brouillons.html
@@ -24,6 +24,11 @@
         <iframe style='width: 608px; height: 399px;'
             src='https://voyant-tools.org/?corpus=7f3614957a0a1c637fadae031faf24e2&stopList=stop.fr.txt&view=Bubbles'></iframe>
     </div>
+    <p>Arbre de mots fait avec Word Tree :</p>
+    <p>Notre-Dame de Paris - Tome 1 by Victor Hugo</p>
+    <div>  
+        <iframe src="https://www.jasondavies.com/wordtree/?source=7f4c04ed2d9f8cb39083cf4379adcb01" width="500" height="500"></iframe>
+    </div>
 </body>
 
 </html>
