--- a/brouillons.html
+++ b/brouillons.html
@@ -44,3 +44,5 @@
     <div>
         <iframe src="https://www.jasondavies.com/wordtree/?source=7f4c04ed2d9f8cb39083cf4379adcb01" width="500" height="500"></iframe>
     </div>
+</body>
+</html>
