--- a/visualisation_exercice2_groupe_brouillons.html
+++ b/visualisation_exercice2_groupe_brouillons.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Sujet 1</h2>
+    <h1>Exercice 2 : Visualisations Textes, Images</h1>
     <p>Membres: Dihya IBERSIENE; Chen WANG; Khoi Nguyen NGUYEN ; Ai Jiaqi; Imad Hantouche; Mai TAKAGI </p> 
+    <h2>Sujet 1</h2>
     <p>Image 1 (Google Sheet): Camembert sur la proportion des genres de chansons aux USA</p>
     <div>
     <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTVfO6d4eHLncrT_udtaVVkRSI4T-gApFGZTeg8EVSMLu0aU5zwpv0EhAT4h03Mt__-3kLfs7LDOrYR/pubchart?oid=2066104298&amp;format=interactive"></iframe>    
