--- a/projet/Couleur.html
+++ b/projet/Couleur.html
@@ -29,7 +29,7 @@
                 $.each(data, function(d, i){
 
                     var vis = '<div class="pix"'+
-                    ' style="left:'+ i.rouge * 3+'px; top:'+ i.bleu * 4 +'px; background-color:rgb('+ i.rouge +','+ i.vert+','+ i.bleu +'></div>';
+                    'style="left:'+ i.rouge * 3+'px; top:'+ i.bleu * 4 +'px; background-color:rgb('+ i.rouge +','+ i.vert +','+ i.bleu +')"></div>';
 
                     $('#page').append(vis);
 
