--- a/projet/Exercice3_jeux_olympiques_brouillon.html
+++ b/projet/Exercice3_jeux_olympiques_brouillon.html
@@ -18,27 +18,24 @@
     </div>
     <p>Image 3 (Vega): Évolution du nombre d'athlètes par pays aux Jeux Olympiques en fonction du type de médaille argent </p>
     <div>
-        <iframe src="https://maifish.github.io/datavis2024/projet/visualization.svg" width="900" height="800" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://maifish.github.io/datavis2024/projet/visualization.svg" width="900" height="500" frameborder="0" scrolling="no"></iframe>
     </div>
     <p> Image 4 (Vega): Nombre de compétitions en fonction du pays </p>
     <div>
-        <iframe src="https://maifish.github.io/datavis2024/projet/visualization (1).svg" width="900" height="800" frameborder="0" scrolling="no" ></iframe>
+        <iframe src="https://maifish.github.io/datavis2024/projet/visualization (1).svg" width="700" height="500" frameborder="0" scrolling="no" ></iframe>
     </div>
     <p>Image 5 (Vega): Nombre d'athlètes à travers des JO été et hiver</p>
     <div>
-        <iframe width="900" height="800" frameborder="0" scrolling="no" src="https://maifish.github.io/datavis2024/projet/visualization-JO-1.svg"></iframe>
+        <iframe width="700" height="500" frameborder="0" scrolling="no" src="https://maifish.github.io/datavis2024/projet/visualization-JO-1.svg"></iframe>
     </div>
     <p>Image 6 (Chart.js): Nombre de médailles gagnées par pays </p>
     <div>
-        <iframe width="900" height="800" frameborder="0" scrolling="no"src="https://maifish.github.io/datavis2024/projet/chartjs/"></iframe>
+        <iframe width="700" height="500" frameborder="0" scrolling="no"src="https://maifish.github.io/datavis2024/projet/chartjs/"></iframe>
     </div>
     <p>Image 7 (observable): Sunburst du jeux olympiques </p>
     <div>
-        <iframe width="100%" height="860" frameborder="0" src="https://observablehq.com/embed/0865b80d92c86283?cells=chart"></iframe>
+        <iframe width="100%" height="860" frameborder="0" src="https://maifish.github.io/datavis2024/projet/chart.svg"></iframe>
     </div>
-    <p>Image 8 (observable): Arbre de réseau jeux olympiques </p>
-    <div>
-        <iframe width="100%" height="684" frameborder="0" src="https://observablehq.com/embed/b90cd5245b1bf665?cells=chart"></iframe>
     </div>
 </body>
 </html>
