--- a/projet/Exercice3_jeux_olympiques_brouillon.html
+++ b/projet/Exercice3_jeux_olympiques_brouillon.html
@@ -4,38 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        iframe {
+            width: 100%;
+            height: 500px; /* Ajustez la hauteur selon vos besoins */
+        }
+    </style>
 </head>
 <body>
     <h1>Exercice 3 : Visualisations sur les jeux olympiques</h1>
     <p>Membres: Dihya IBERSIENE; Chen WANG; Khoi Nguyen NGUYEN ; Ai Jiaqi; Imad Hantouche; Mai TAKAGI </p> 
     <p>Image 1 (Rawgraphs): Le nombre de compétitions par an</p>
     <div>
-      <iframe src="https://maifish.github.io/datavis2024/projet/rawgraphs.html" width="700" height="500" frameborder="0"></iframe>
+      <iframe src="https://maifish.github.io/datavis2024/projet/rawgraphs.html" frameborder="0"></iframe>
     </div>  
     <p>Image 2 (Manuel): Visualisation des couleurs dominantes des drapeaux </p>
     <div>     
-      <iframe src="https://maifish.github.io/datavis2024/projet/Couleur.html" width="700" height="500" frameborder="0"></iframe>
+      <iframe src="https://maifish.github.io/datavis2024/projet/Couleur.html" frameborder="0"></iframe>
     </div>
     <p>Image 3 (Vega): Évolution du nombre d'athlètes par pays aux Jeux Olympiques en fonction du type de médaille argent </p>
     <div>
-        <iframe src="https://maifish.github.io/datavis2024/projet/visualization.svg" width="900" height="500" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://maifish.github.io/datavis2024/projet/visualization.svg" frameborder="0" scrolling="no"></iframe>
     </div>
     <p> Image 4 (Vega): Nombre de compétitions en fonction du pays </p>
     <div>
-        <iframe src="https://maifish.github.io/datavis2024/projet/visualization (1).svg" width="700" height="500" frameborder="0" scrolling="no" ></iframe>
+        <iframe src="https://maifish.github.io/datavis2024/projet/visualization (1).svg" scrolling="no"></iframe>
     </div>
     <p>Image 5 (Vega): Nombre d'athlètes à travers des JO été et hiver</p>
     <div>
-        <iframe width="700" height="500" frameborder="0" scrolling="no" src="https://maifish.github.io/datavis2024/projet/visualization-JO-1.svg"></iframe>
+        <iframe src="https://maifish.github.io/datavis2024/projet/visualization-JO-1.svg" scrolling="no"></iframe>
     </div>
     <p>Image 6 (Chart.js): Nombre de médailles gagnées par pays </p>
     <div>
-        <iframe width="700" height="500" frameborder="0" scrolling="no"src="https://maifish.github.io/datavis2024/projet/chartjs/"></iframe>
+        <iframe src="https://maifish.github.io/datavis2024/projet/chartjs/" scrolling="no"></iframe>
     </div>
     <p>Image 7 (observable): Sunburst du jeux olympiques </p>
     <div>
-        <iframe width="100%" height="860" frameborder="0" src="https://maifish.github.io/datavis2024/projet/chart.svg"></iframe>
-    </div>
+        <iframe src="https://maifish.github.io/datavis2024/projet/chart.svg"></iframe>
     </div>
 </body>
 </html>
