--- a/projet/Exercice3_jeux_olympiques_brouillon.html
+++ b/projet/Exercice3_jeux_olympiques_brouillon.html
@@ -7,7 +7,7 @@
     <style>
         iframe {
             width: 100%;
-            height: 500px; /* Ajustez la hauteur selon vos besoins */
+            height: 80%; /* Ajustez la hauteur selon vos besoins */
         }
     </style>
 </head>
