--- a/projet/Exercice3_jeux_olympiques_brouillon.html
+++ b/projet/Exercice3_jeux_olympiques_brouillon.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <style>
         iframe {
-            width: 100%;
-            height: 80%; /* Ajustez la hauteur selon vos besoins */
+            width: 80%;
+            height: 80%;
         }
     </style>
 </head>
