--- a/projet/Exercice3_jeux_olympiques_brouillon.html
+++ b/projet/Exercice3_jeux_olympiques_brouillon.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <style>
         iframe {
-            width: 80%;
-            height: 80%;
+            width: 500px;
+            height: 400px;
         }
     </style>
 </head>
