--- a/projet/Exercice3_jeux_olympiques_brouillon.html
+++ b/projet/Exercice3_jeux_olympiques_brouillon.html
@@ -7,7 +7,7 @@
     <style>
         iframe {
             width: 500px;
-            height: 400px;
+            height: 100%;
         }
     </style>
 </head>
