--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -64,6 +64,13 @@
         <h2 class="mt-5">L'histoire des logos des Jeux olympiques</h2>
     </div>
     <div>
+        <h2>Evolution au cours du temps du nombre de participants</h2>
+        <div>
+            <iframe src="https://maifish.github.io/datavis2024/projet/visualization.svg" width="1300" height="1000"
+                frameborder="0"></iframe>
+        </div>
+    </div>
+    <div>
         <h2 id="medal" class="mt-5">Qui est le meilleur athlète de JO?</h2>
 
         <div class="athlete-card">
@@ -97,7 +104,7 @@
                     <div class="position-relative">
                         <img src="images/germany.png" class="img-fluid custom-image" alt="Image 2" data-toggle="tooltip"
                             data-placement="top" title="1130 médailles (Or: 285, Argent: 326, Bronze: 363)"
-                            style="width: 300px;">
+                            style="width: 300px; height: 150px;">
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -108,7 +115,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="position-relative">
+                    <div class="position-relative mt-5">
                         <img src="images/grande-bretagne.jpeg" class="img-fluid custom-image" alt="Image 3"
                             data-toggle="tooltip" data-placement="top"
                             title="916 médailles (Or: 285, Argent: 316, Bronze: 315)" style="width: 300px;">
@@ -118,19 +125,24 @@
         </div>
     </div>
     <div>
+        <h2 class="mt-5">Distribution de médaille par pays</h2>
+        <iframe width="600" height="371" seamless frameborder="0" scrolling="no"
+            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTVfO6d4eHLncrT_udtaVVkRSI4T-gApFGZTeg8EVSMLu0aU5zwpv0EhAT4h03Mt__-3kLfs7LDOrYR/pubchart?oid=1993694439&amp;format=interactive"></iframe>
+    </div>
+    <div>
         <h2 class="mt-5">Nombre de médailles gagnées par les pays</h2>
-        <iframe width="1300" height="1000" frameborder="0" scrolling="no"
+        <iframe width="1300" height="800" frameborder="0" scrolling="no"
             src="https://maifish.github.io/datavis2024/projet/chartjs/"></iframe>
     </div>
     <div>
-        <h2 class="mt-5">Evolution au cours du temps du nombre de participants</h2>
+        <h2>Les pays participants et le nombre de médailles d'or aux Jeux olympiques de Tokyo en 2020</h2>
+        <iframe width="900" height="800" frameborder="0" scrolling="no"
+            src="https://plotly.com/~JiaqiAI/3.embed"></iframe>
     </div>
     <div>
-        <h2 id="paris" class="mt-5">JO Paris 2024</h2>
+        <h2 id="paris" class="mt-5">Jeux Olympiques de Paris 2024</h2>
         <iframe style='width: 471px; height: 346px;'
             src='https://voyant-tools.org/tool/Cirrus/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
-
-
 </body>
 
 </html>
