--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -62,6 +62,8 @@
     </div>
     <div>
         <h2 class="mt-5">L'histoire des logos des Jeux olympiques</h2>
+        <iframe src="https://maifish.github.io/datavis2024/projet/JO/car.html" width="1300" height="1000"
+                frameborder="0"></iframe>
     </div>
     <div>
         <h2>Evolution au cours du temps du nombre de participants</h2>
