--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -61,9 +61,9 @@
             referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
     </div>
     <div>
-        <h2 class="mt-5">L'histoire des logos des Jeux olympiques</h2>
+        <h2 class="mt-5">De 1896 à Aujourd'hui : L'Évolution Visuelle Captivante des Logos des Jeux Olympiques</h2>
         <iframe src="https://maifish.github.io/datavis2024/projet/JO/car.html" width="1300" height="1000"
-                frameborder="0"></iframe>
+            frameborder="0"></iframe>
     </div>
     <div>
         <h2 id="medal" class="mt-5">Qui est le meilleur athlète de JO?</h2>
@@ -72,8 +72,8 @@
             <img src="images/micheal.jpeg" alt="micheal" style="margin-left: 30px; width: 200px; height: 200px;">
             <div class="info">
                 <h4>Michael Phelps</h2>
-                    <p>Équipe: États-Unis d’Amérique</p>
-                    <p>Sport: Natation</p>
+                    <p>Pays: États-Unis</p>
+                    <p>Spécialité: Natation</p>
                     <div class="medals">
                         <div class="gold">23</div>
                         <div class="silver">3</div>
@@ -121,7 +121,8 @@
     </div>
     <div>
         <h2 class="mt-5">Distribution de médaille par pays</h2>
-        <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTVfO6d4eHLncrT_udtaVVkRSI4T-gApFGZTeg8EVSMLu0aU5zwpv0EhAT4h03Mt__-3kLfs7LDOrYR/pubchart?oid=1216224309&amp;format=interactive"></iframe>
+        <iframe width="600" height="371" seamless frameborder="0" scrolling="no"
+            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTVfO6d4eHLncrT_udtaVVkRSI4T-gApFGZTeg8EVSMLu0aU5zwpv0EhAT4h03Mt__-3kLfs7LDOrYR/pubchart?oid=1216224309&amp;format=interactive"></iframe>
     </div>
     <div>
         <h2 class="mt-5">Nombre de médailles gagnées par les pays</h2>
@@ -137,6 +138,10 @@
         <h2 id="paris" class="mt-5">Jeux Olympiques de Paris 2024</h2>
         <iframe style='width: 471px; height: 346px;'
             src='https://voyant-tools.org/tool/Cirrus/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
+        <h2>Calendrier olympique des Jeux de Paris 2024</h2>
+        <iframe
+            src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1qjWT7HG2KTsKZ_8b6_Ane50t4a5D8qPVNqx0dVkPr5E&font=Default&lang=en&initial_zoom=2&height=550'
+            width='100%' height='550' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 </body>
 
 </html>
