--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -121,8 +121,13 @@
     </div>
     <div>
         <h2 class="mt-5">Distribution de médaille par pays</h2>
-        <iframe width="600" height="371" seamless frameborder="0" scrolling="no"
-            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTVfO6d4eHLncrT_udtaVVkRSI4T-gApFGZTeg8EVSMLu0aU5zwpv0EhAT4h03Mt__-3kLfs7LDOrYR/pubchart?oid=1216224309&amp;format=interactive"></iframe>
+        <div class="wrap">
+            <iframe class="iframe" width="560" height="315"
+                src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTVfO6d4eHLncrT_udtaVVkRSI4T-gApFGZTeg8EVSMLu0aU5zwpv0EhAT4h03Mt__-3kLfs7LDOrYR/pubchart?oid=1216224309&amp;format=interactive"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
     </div>
     <div>
         <h2 class="mt-5">Nombre de médailles gagnées par les pays</h2>
