--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -66,7 +66,7 @@
             frameborder="0"></iframe>
     </div>
     <div>
-        <h2 id="medal" class="mt-5">Qui est le meilleur athlète de JO?</h2>
+        <h2 id="medal" class="mt-5">Qui est l'athlète le plus médaillé des jeux olympiques ?</h2>
 
         <div class="athlete-card">
             <img src="images/micheal.jpeg" alt="micheal" style="margin-left: 30px; width: 200px; height: 200px;">
