--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -136,8 +136,11 @@
     </div>
     <div>
         <h2>Les pays participants et le nombre de médailles d'or aux Jeux olympiques de Tokyo en 2020</h2>
-        <iframe width="900" height="800" frameborder="0" scrolling="no"
-            src="https://plotly.com/~JiaqiAI/3.embed"></iframe>
+        <div class="wrap">
+            <iframe class="iframe" width="900" height="800" src="https://plotly.com/~JiaqiAI/3.embed" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
     </div>
     <div>
         <h2 id="paris" class="mt-5">Jeux Olympiques de Paris 2024</h2>
