--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -146,6 +146,9 @@
         <h2 id="paris" class="mt-5">Jeux Olympiques de Paris 2024</h2>
         <iframe style='width: 471px; height: 346px;'
             src='https://voyant-tools.org/tool/Cirrus/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
+
+        <iframe width="600" height="450" src="https://lookerstudio.google.com/embed/reporting/ee743c23-257e-4f73-9861-7519e81315d6/page/WIlnD" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+        
         <h2>Calendrier olympique des Jeux de Paris 2024</h2>
         <iframe
             src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1qjWT7HG2KTsKZ_8b6_Ane50t4a5D8qPVNqx0dVkPr5E&font=Default&lang=en&initial_zoom=2&height=550'
