--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -66,6 +66,11 @@
             frameborder="0"></iframe>
     </div>
     <div>
+        <h2 class="mt-5">Les pays et les villes qui organisent les Jeux olympiques chaque année, ainsi que le nombre d'athlètes</h2>
+        <iframe width="100%" height="830" frameborder="0"
+  src="https://observablehq.com/embed/e1f3bc3aea3501bc@396?cells=chart"></iframe>
+    </div>    
+    <div>
         <h2 id="medal" class="mt-5">Qui est l'athlète le plus médaillé des jeux olympiques ?</h2>
 
         <div class="athlete-card">
