--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -66,6 +66,20 @@
             frameborder="0"></iframe>
     </div>
     <div>
+        <h2 class="mt-5">Les pays et les villes qui organisent les JO chaque année, ainsi que le nombre d'athlètes</h2>
+        <div class="wrap">
+            <iframe width="100%" height="1012" frameborder="0"
+                src="https://observablehq.com/embed/e1f3bc3aea3501bc?cells=chart"></iframe>
+        </div>
+    </div>
+    <div>
+        <h2 class="mt-5">Carte des villes d’accueil des jeux olympiques d’été de 1896 à 2020</h2>
+        <div class="wrap">
+            <iframe src="https://maifish.github.io/datavis2024/projet/Carte_des_villes_d_accueils_JO.html" width="1300"
+                height="1000" frameborder="0"></iframe>
+        </div>
+    </div>
+    <div>
         <h2 id="medal" class="mt-5">Qui est l'athlète le plus médaillé des jeux olympiques ?</h2>
 
         <div class="athlete-card">
@@ -128,11 +142,6 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
-    </div>
-    <div>
-        <h2 class="mt-5">Nombre de médailles gagnées par les pays</h2>
-        <iframe width="1300" height="800" frameborder="0" scrolling="no"
-            src="https://maifish.github.io/datavis2024/projet/chartjs/"></iframe>
     </div>
     <div>
         <h2 class="mt-5">Tableau de bord de tout les Jeux Olympiques (1896 -2022)</h2>
