--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -162,10 +162,18 @@
         </div>
     </div>
     <div>
-        <h2 id="paris" class="mt-5">Jeux Olympiques de Paris 2024</h2>
+        <h1 id="paris" class="mt-5">Jeux Olympiques de Paris 2024</h1>
+        <h2>Cirrus</h2>
         <div class="wrap">
             <iframe class="iframe" style='width: 471px; height: 346px;'
                 src='https://voyant-tools.org/tool/Cirrus/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
+        </div>
+
+      <div>
+        <h2>Termes</h2>
+        <div class="wrap">
+            <iframe style='width: 424px; height: 280px;' 
+                src='https://voyant-tools.org/tool/CorpusTerms/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
         </div>
 
 
