--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -169,18 +169,19 @@
                 src='https://voyant-tools.org/tool/Cirrus/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
         </div>
 
-      <div>
-        <h2>Termes</h2>
-        <div class="wrap">
-            <iframe style='width: 424px; height: 280px;' 
-                src='https://voyant-tools.org/tool/CorpusTerms/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
-        </div>
+        <div>
+            <h2>Termes</h2>
+            <div class="wrap">
+                <iframe style='width: 424px; height: 280px;'
+                    src='https://voyant-tools.org/tool/CorpusTerms/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
+            </div>
 
 
-        <h2>Calendrier olympique des Jeux de Paris 2024</h2>
-        <iframe
-            src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1qjWT7HG2KTsKZ_8b6_Ane50t4a5D8qPVNqx0dVkPr5E&font=Default&lang=en&initial_zoom=2&height=550'
-            width='100%' height='550' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+            <h2 class="mt-5">Calendrier olympique des Jeux de Paris 2024</h2>
+            <iframe
+                src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1qjWT7HG2KTsKZ_8b6_Ane50t4a5D8qPVNqx0dVkPr5E&font=Default&lang=en&initial_zoom=2&height=550'
+                width='100%' height='550' webkitallowfullscreen mozallowfullscreen allowfullscreen
+                frameborder='0'></iframe>
 </body>
 
 </html>
