--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -176,6 +176,13 @@
                     src='https://voyant-tools.org/tool/CorpusTerms/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
             </div>
 
+        <div>
+            <h2>Liens</h2>
+            <div class="wrap">
+                <iframe style='width: 424px; height: 280px;' 
+                    src='https://voyant-tools.org/tool/CollocatesGraph/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&query=jeux&query=2024&query=paris&mode=corpus&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
+            </div>            
+
 
             <h2 class="mt-5">Calendrier olympique des Jeux de Paris 2024</h2>
             <iframe
