--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -190,6 +190,20 @@
                     src='https://voyant-tools.org/tool/Reader/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&skipToDocId=fa2b501ee4906d435b7539ffa201916f&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
             </div>
 
+        <div>
+            <h3>Grappe de termes</h3>
+            <div class="wrap">
+                <iframe style='width: 422px; height: 280px;' 
+                    src='https://voyant-tools.org/tool/TermsBerry/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&numInitialTerms=25&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
+            </div>
+
+        <div>
+            <h3>Tendances</h3>
+            <div class="wrap">
+                <iframe style='width: 424px; height: 280px;' 
+                    src='https://voyant-tools.org/tool/Trends/?categories=f0e5e030436be08bfde82a7e7838b825&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&query=jeux&query=2024&query=paris&query=cojop&query=olympiques&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
+            </div>
+
 
             <h2 class="mt-5">Calendrier olympique des Jeux de Paris 2024</h2>
             <iframe
