--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -204,6 +204,13 @@
                     src='https://voyant-tools.org/tool/Trends/?categories=f0e5e030436be08bfde82a7e7838b825&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&query=jeux&query=2024&query=paris&query=cojop&query=olympiques&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
             </div>
 
+        <div>
+            <h3>Contextes</h3>
+            <div class="wrap">
+                <iframe style='width: 638px; height: 175px;' 
+                    src='https://voyant-tools.org/tool/Contexts/?categories=f0e5e030436be08bfde82a7e7838b825&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&query=jeux&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
+            </div>
+
 
             <h2 class="mt-5">Calendrier olympique des Jeux de Paris 2024</h2>
             <iframe
