--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -163,60 +163,54 @@
     </div>
     <div>
         <h2 id="paris" class="mt-5">Jeux Olympiques de Paris 2024</h2>
-        <h3>Cirrus</h3>
+        <img src="logo-JO/2024-paris.png" alt="...">
+        <h3 class="mt-5">Calendrier des compétitions par jeux</h3>
+        <iframe
+            src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1qjWT7HG2KTsKZ_8b6_Ane50t4a5D8qPVNqx0dVkPr5E&font=Default&lang=en&initial_zoom=2&height=550'
+            width='100%' height='550' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+        <h3>Analyse de données textuelles en pratique</h3>
+        <h4>Cirrus</h4>
         <div class="wrap">
             <iframe class="iframe" style='width: 471px; height: 346px;'
                 src='https://voyant-tools.org/tool/Cirrus/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
         </div>
 
         <div>
-            <h3>Termes</h3>
+            <h4>Termes</h4>
             <div class="wrap">
                 <iframe style='width: 424px; height: 280px;'
                     src='https://voyant-tools.org/tool/CorpusTerms/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
             </div>
-
-        <div>
-            <h3>Liens</h3>
+            <h4>Liens</h4>
             <div class="wrap">
-                <iframe style='width: 424px; height: 280px;' 
+                <iframe style='width: 424px; height: 280px;'
                     src='https://voyant-tools.org/tool/CollocatesGraph/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&query=jeux&query=2024&query=paris&mode=corpus&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
             </div>
-
-        <div>
-            <h3>Lecteur</h3>
+            <h4>Lecteur</h4>
             <div class="wrap">
-                <iframe style='width: 422px; height: 280px;' 
+                <iframe style='width: 422px; height: 280px;'
                     src='https://voyant-tools.org/tool/Reader/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&skipToDocId=fa2b501ee4906d435b7539ffa201916f&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
             </div>
-
-        <div>
-            <h3>Grappe de termes</h3>
+            <h4>Grappe de termes</h4>
             <div class="wrap">
-                <iframe style='width: 422px; height: 280px;' 
+                <iframe style='width: 422px; height: 280px;'
                     src='https://voyant-tools.org/tool/TermsBerry/?categories=72effc95618d179f239cff896feeb317&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&numInitialTerms=25&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
             </div>
-
-        <div>
-            <h3>Tendances</h3>
+            <h4>Tendances</h4>
             <div class="wrap">
-                <iframe style='width: 424px; height: 280px;' 
+                <iframe style='width: 424px; height: 280px;'
                     src='https://voyant-tools.org/tool/Trends/?categories=f0e5e030436be08bfde82a7e7838b825&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&query=jeux&query=2024&query=paris&query=cojop&query=olympiques&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
             </div>
-
-        <div>
-            <h3>Contextes</h3>
+            <h4>Contextes</h4>
             <div class="wrap">
-                <iframe style='width: 638px; height: 175px;' 
+                <iframe style='width: 638px; height: 175px;'
                     src='https://voyant-tools.org/tool/Contexts/?categories=f0e5e030436be08bfde82a7e7838b825&stopList=keywords-08929bdc49887e0e6a898ca924cbaf6a&query=jeux&corpus=4938a289be07783feb0ee0c431558e70'></iframe>
             </div>
-
-
-            <h2 class="mt-5">Calendrier olympique des Jeux de Paris 2024</h2>
-            <iframe
-                src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1qjWT7HG2KTsKZ_8b6_Ane50t4a5D8qPVNqx0dVkPr5E&font=Default&lang=en&initial_zoom=2&height=550'
-                width='100%' height='550' webkitallowfullscreen mozallowfullscreen allowfullscreen
-                frameborder='0'></iframe>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
 </body>
 
 </html>
