--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -168,7 +168,7 @@
         <iframe
             src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1qjWT7HG2KTsKZ_8b6_Ane50t4a5D8qPVNqx0dVkPr5E&font=Default&lang=en&initial_zoom=2&height=550'
             width='100%' height='550' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
-        <h3>Analyse de données textuelles en pratique</h3>
+        <h3>Analyse de données textuelles en pratique d'un corpus</h3>
         <h4>Cirrus</h4>
         <div class="wrap">
             <iframe class="iframe" style='width: 471px; height: 346px;'
