--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -46,6 +46,8 @@
             <li><a href="#medal"><img src="images/medal.png" style="width: 20px; height: 20px" alt="medal"></a>
             </li>
             <li><a href="#paris"><img src="images/paris.png" style="width: 20px; height: 20px" alt="medal"></a></li>
+            <li><a href="https://github.com/maifish/datavis2024/tree/main/projet/JO/csv"><img src="images/csv.png"
+                        style="width: 20px; height: 20px" alt="medal"></a></li>
         </ul>
     </nav>
     <div>
