--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -105,7 +105,9 @@
         </div>
     </div>
     <div>
-        <h2 class="mt-5">Tableau de bord de tout les Jeux Olympiques (1896-2022)</h2>
+        <h2 class="mt-5">Visualisation des pays et villes hôtes des JO à travers une carte interactive et diagrammes de
+            compétition incluant la
+            répartition des médailles</h2>
         <div class="wrap">
             <iframe class="iframe" width="800" height="600"
                 src="https://lookerstudio.google.com/embed/reporting/ee743c23-257e-4f73-9861-7519e81315d6/page/WIlnD"
