--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -62,12 +62,14 @@
         <iframe style="margin: 100px; width: 80vw; height: 50vh; border: none;"
             src="https://query.wikidata.org/embed.html#%23defaultView%3ATimeline%0ASELECT%20%3FSummer_Olympic_Games%20%3FSummer_Olympic_GamesLabel%20%3Flocation%20%3FlocationLabel%20%3Fcountry%20%3FcountryLabel%20%3Flogo_image%20%3Fpoint_in_time%20WHERE%20%7B%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22%5BAUTO_LANGUAGE%5D%2Cen%22.%20%7D%0A%20%20%3FSummer_Olympic_Games%20wdt%3AP31%20wd%3AQ159821.%0A%20%20OPTIONAL%20%7B%20%3FSummer_Olympic_Games%20wdt%3AP276%20%3Flocation.%20%7D%0A%20%20OPTIONAL%20%7B%20%3FSummer_Olympic_Games%20wdt%3AP17%20%3Fcountry.%20%7D%0A%20%20OPTIONAL%20%7B%20%3FSummer_Olympic_Games%20wdt%3AP154%20%3Flogo_image.%20%7D%0A%20%20OPTIONAL%20%7B%20%3FSummer_Olympic_Games%20wdt%3AP585%20%3Fpoint_in_time.%20%7D%0A%7D%0A%0A"
             referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
-        <p style="text-align: center;">Interroger la base de données Wikidata pour récupérer des informations sur les
-            Jeux Olympiques d'été. la
-            visualisation
-            résultante est une représentation temporelle (en timeline) des Jeux Olympiques d'été, mettant en évidence
-            leur
-            emplacement, leur pays hôte, le logo associé et la chronologie des événements.</p>
+        <div class="ml-5">
+            <p style="text-align: center;">Interroger la base de données Wikidata pour récupérer des informations sur
+                les Jeux Olympiques d'été. la visualisation résultante est une représentation temporelle
+                <br>(en timeline)
+                des Jeux Olympiques d'été, mettant en évidence leur emplacement, leur pays hôte, le logo associé et la
+                chronologie des événements.
+            </p>
+        </div>
     </div>
     <div>
         <h2 class="mt-5">De 1896 à Aujourd'hui : L'Évolution Visuelle Captivante des Logos des Jeux Olympiques</h2>
