--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -45,9 +45,11 @@
             </li>
             <li><a href="#medal"><img src="images/medal.png" style="width: 20px; height: 20px" alt="medal"></a>
             </li>
-            <li><a href="#paris"><img src="images/paris.png" style="width: 20px; height: 20px" alt="medal"></a></li>
+            <li><a href="#paris"><img src="images/paris.png" style="width: 20px; height: 20px" alt="paris"></a></li>
             <li><a href="https://github.com/maifish/datavis2024/tree/main/projet/JO/csv"><img src="images/csv.png"
-                        style="width: 20px; height: 20px" alt="medal"></a></li>
+                        style="width: 20px; height: 20px" alt="csv"></a></li>
+            <li><a href="membre.html"><img src="images/menbre.png" style="width: 20px; height: 20px" alt="membre"></a>
+            </li>
         </ul>
     </nav>
     <div>
