--- a/projet/JO/membre.html
+++ b/projet/JO/membre.html
@@ -65,7 +65,7 @@
             </div>
             <div class="col-md-6">
                 <div class="member">
-                    <img src="member4.jpg" alt="imad">
+                    <img src="images/imad.png" alt="imad">
                     <h3>Imad Hantouche</h3>
                     <p>Master Transition Numérique</p>
                 </div>
