--- a/projet/JO/index.html
+++ b/projet/JO/index.html
@@ -107,6 +107,10 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
+        <p style="text-align: center"><br>Le diagramme en barres présenté explore des informations spécifiques liées à
+            la
+            distribution des médailles
+            d'Or, d'Argent et de Bronze par pays participant.</p>
     </div>
     <div>
         <h2 class="mt-5">Visualisation des pays et villes hôtes des JO à travers une carte interactive et diagrammes de
